# gTTS_gradio

./: main.py  pyproject.toml
