[tool.poetry]
name = "gtts-gradio"
version = "0.1.0"
description = ""
authors = ["haganelego <hagane01061998@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gradio = "^3.50.2"
gtts = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
